fixed more wrapping formatting

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,31 +3,38 @@
 	/* margin-left: 12%; */
 	/* margin-right: 0; */
 	align-self: center;
-	align-items: center;
-	justify-content: center;
+	align-items: left;
+	justify-content: left;
 	display: flex;
 	flex-direction: wrap;
 	flex-flow: row wrap;
 }
 
 .project {
-	/* width: 10rem; */
-	height: 10rem;
-	padding: 20px;
+	width: 23%;
+	height: 28.75%;
+	min-width: 120px;
+	min-height: 150px;
+	
+	padding: 1%;
 	
 	align-self: center;
 	align-items: center;
 	justify-content: center;
 }
 
+/* should have width:height ratio of 4:5 */
 .project > img {
-	width: 200px;
-	height: 250px;
+	width: 100%;
+	height: 100%;
+	min-width: 120px;
+	min-height: 150px;
+	
 	opacity: 1.0;
 }
 
 .project > img:hover {
-	opacity: .9;
+	opacity: .85;
 }
 
 .project > span {
